hw07/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-hw06-order-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
        - path: /orders(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: order-app-order-service
              port:
                number: 8082
